--- a/algorithms/SlidingWindow.ipynb
+++ b/algorithms/SlidingWindow.ipynb
@@ -51,11 +51,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Max Sum of Any Continuous Subarray"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Given an array of positive numbers and a positive number ‘k,’ find the maximum sum of any contiguous subarray of size ‘k’.\n",
+    "\n",
+    "class Solution:\n",
+    "    def find_max_subarray_sum(self, arr: list, k: int) -> list:\n",
+    "        summ = sum(arr[0:k])\n",
+    "        max_sum = summ\n",
+    "        for i in range(len(arr)-k):\n",
+    "            summ = summ - arr[i] + arr[k+i]\n",
+    "            if summ > max_sum:\n",
+    "                max_sum = summ\n",
+    "        return max_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Input: [2, 1, 5, 1, 3, 2], k=3 \n",
+    "# Output: 9\n",
+    "# Explanation: Subarray with maximum sum is [5, 1, 3].\n",
+    "\n",
+    "arr, k = [2, 1, 5, 1, 3, 2], 3 \n",
+    "\n",
+    "output.find_max_subarray_sum(arr, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Input: [2, 3, 4, 1, 5], k=2 \n",
+    "# Output: 7\n",
+    "# Explanation: Subarray with maximum sum is [3, 4].\n",
+    "\n",
+    "arr, k = [2, 3, 4, 1, 5], 2\n",
+    "\n",
+    "output.find_max_subarray_sum(arr, k)"
+   ]
   }
  ],
  "metadata": {
