added notes about time and space complexity

--- a/stonex-python-april26.ipynb
+++ b/stonex-python-april26.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solution during the interview"
+    "### Solution during the interview (incomplete)"
    ]
   },
   {
@@ -149,11 +149,13 @@
     "        # if prefix is not empty, add it to the common_prefixes set\n",
     "        if prefix:\n",
     "            common_prefixes.add(prefix)\n",
-    "            prefix = ''\n",
+    "            # prefix = ''\n",
     "        \n",
     "        # check if common_prefix is in the other strings\n",
     "\n",
-    "        # iterate through each str in the array from left+1 to right\n",
+    "        # loop from left+1 to right to check if the current common prefix exists in all the other strings in the array\n",
+    "        # note: we start the loop at left+1 because we've already compared array[left] with array[right] in the previous loop\n",
+    "        #       and we're assuming that array[left] is already a part of the common prefix\n",
     "        for idx in range(left+1, right):\n",
     "            # check if the current word starts with the prefix string\n",
     "            # if all words start with the prefix, add the prefix string to the common_prefixes set\n",
@@ -270,7 +272,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimized solution"
+    "### Second solution (post-interview)\n",
+    "\n",
+    "Below I provide another, more straight-forward solution to this problem.\n",
+    "\n",
+    "Time and space complexity:\n",
+    "- Technically, both solutions have a time complexity of O(N*M), where N is the length of the array and M is the length of the shortest string in the array, as both solutions need to iterate through all characters in the shortest string and compare them to the corresponding characters in the other strings in the array. However, solution 1 uses the two pointers technique to narrow down the range of strings being compared in each iteration, which reduces the number of comparisons that need to be made. In contrast, solution 2 loops through all the characters in each string and compares them one-by-one, which can be less efficient when the strings are very long. Therefore, solution 1 is likely to be slightly faster than solution 2.\n",
+    "- In terms of space complexity, solution 2 is better since it does not use any additional data structures, whereas solution 1 creates a set to store common prefixes. \n",
+    "\n",
+    "    **While solution 1 is likely to be faster than solution 2 in most cases, solution 2 might be preferred if space is a concern and for its readability.**"
    ]
   },
   {
@@ -375,6 +385,133 @@
       ]
      },
      "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = [\"cattle\", \"car\", \"christmas\" ,\"cabal\" ,\"cabby\" ,\"caber\" ,\"cabin\" ,\"cable\" ,\"cabob\" ,\"cacao\"]\n",
+    "# output = 'c'\n",
+    "longest_common_prefix(input)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Third solution (post-interview)\n",
+    "\n",
+    "As I adding notes about the time and space complexity for the two solutions above, I realized the solution could be further improved by using a binary search approach to narrow down the range of strings being compared. \n",
+    "\n",
+    "Time and space complexity:\n",
+    "- The implementation below has a time complexity of O(N*log M), where N is the length of the array and M is the length of the shortest string, because we perform binary search on the length of the longest common prefix, which can be at most the length of the shortest string. Since we are cutting the range in half with each iteration, the time complexity is logarithmic. \n",
+    "- The space complexity is O(1), as we are only using a constant amount of extra space to store variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_common_prefix(array: list[str]) -> str:\n",
+    "    if not array:\n",
+    "        return \"\"\n",
+    "\n",
+    "    shortest = min(array, key=len)\n",
+    "    left = 0\n",
+    "    right = len(shortest)\n",
+    "\n",
+    "    while left <= right:\n",
+    "        mid = (left + right) // 2\n",
+    "        prefix = shortest[:mid]\n",
+    "\n",
+    "        if all(word.startswith(prefix) for word in array):\n",
+    "            left = mid + 1\n",
+    "        else:\n",
+    "            right = mid - 1\n",
+    "\n",
+    "    return shortest[:left-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cat'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = [\"cat\", \"catt\", \"catte\"]\n",
+    "# output 'cat'\n",
+    "longest_common_prefix(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = [\"dog\", \"bird\"]\n",
+    "# output ''\n",
+    "longest_common_prefix(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = [\"bird\", \"cat\", \"catt\", \"dog\", \"catte\"]\n",
+    "longest_common_prefix(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c'"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
